# pykdeconn

./: .coveragerc  .gitignore  LICENSE  README.md  pyconnect.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml  publish-to-pypi.yml
src/pyconnect/: client.py  gsconnect.py  server.py  settings.py  sslutils.py  utils.py
src/pyconnect/protocol/: __init__.py  connection.py  consts.py  packets.py
src/pykdeconn/: __init__.py  client.py  gsconnect.py  server.py  settings.py  sslutils.py  utils.py
src/pykdeconn/protocol/: __init__.py  connection.py  deviceconfig.py  hostconfig.py  packets.py  settings.py  transfer.py
tests/: conftest.py  test_DeviceConfig.py  test_gsconnect.py  test_parse_VCard21.py  test_settings.py  test_sslutils.py  test_utils.py  vcard_example_1.txt
tests/examples/: dconf-result-example.txt
tests/fixtures/: dconf-result-example.txt
tests/protocol/: test_IdentityPacket.py  test_PairPacket.py  test_ShareRequestPacket.py  test_get_packet_by_kde_type_name.py  test_make_pack_mutable.py
tests/protocol/fixtures/: kdeconnect.identity.json  kdeconnect.share.request.json
